Bug 1081993 - WinIMEHandler should notify nsIMM32Handler of some notifications even in TSF mode when IMM IME is active. r=emk, a=lsblakk