widget/windows/WinIMEHandler.h
@@ -122,6 +122,7 @@ private:
   static bool sPluginHasFocus;
 
   static bool IsTSFAvailable() { return (sIsInTSFMode && !sPluginHasFocus); }
+  static bool IsIMMActive();
 #endif // #ifdef NS_ENABLE_TSF
 };
 
